--- a/src/assets/less/styles/variables/_colors.less
+++ b/src/assets/less/styles/variables/_colors.less
@@ -1,4 +1,4 @@
-@blue-base:          #3e79f7;
+@blue-base:          #030a18;
 @purple-base:        #a461d8;
 @cyan-base:          #04d182;
 @green-base:         #21B573;
