--- a/src/assets/less/styles/variables/_colors.less
+++ b/src/assets/less/styles/variables/_colors.less
@@ -1,16 +1,16 @@
-@blue-base:          #030a18;
-@purple-base:        #09010f;
-@cyan-base:          #000503;
-@green-base:         #000503;
-@magenta-base:       #030002;
-@pink-base:          #080105;
-@red-base:           #070100;
-@orange-base:        #0a0500;
-@yellow-base:        #080700;
-@volcano-base:       #0e0101;
-@geekblue-base:      #00070a;
-@lime-base:          #070a00;
-@gold-base:          #050400;
+@blue-base:          #7b8f2c;
+@purple-base:        #a461d8;
+@cyan-base:          #04d182;
+@green-base:         #21B573;
+@magenta-base:       #eb2f96;
+@pink-base:          #eb2f96;
+@red-base:           #de4436;
+@orange-base:        #fa8c16;
+@yellow-base:        #fadb14;
+@volcano-base:       #ff6b72;
+@geekblue-base:      #17bcff;
+@lime-base:          #a0d911;
+@gold-base:          #ffc542;
 
 @primary-color:       @blue-base; 
 @info-color:          @primary-color;
@@ -19,15 +19,15 @@
 @error-color:         @volcano-base;
 @highlight-color:     @volcano-base;
 @warning-color:       @gold-base;
-@normal-color:       #00000c;
-@white:              rgb(8, 0, 0);
+@normal-color:       #fafafb;
+@white:              #fff;
 @black:              #000;
 
-@gray-dark:                 #00050a;
-@gray:                      #000203;
-@gray-light:                #00050a;
-@gray-lighter:              #0a0000;
-@gray-lightest:             #00000a;
+@gray-dark:                 #1a3353;
+@gray:                      #455560;
+@gray-light:                #72849a;
+@gray-lighter:              #ededed;
+@gray-lightest:             #f7f7f8;
 
 @colors-palette: {
 	blue:     	  @blue-base;
