--- a/src/assets/less/styles/variables/_common.less
+++ b/src/assets/less/styles/variables/_common.less
@@ -4,7 +4,7 @@
 @rtl-enable: true;
 
 // Background color for `<body>`
-@body-background:    #0c0c75;
+@body-background:    #fafafb;
 // Base background color for most components
 @component-background: @white;
 // Popover background color
@@ -23,7 +23,7 @@
 @icon-color-hover: @gray;
 @heading-color: @gray-dark;
 @text-color-dark: @gray-dark;
-@text-color-secondary-dark: #3c718b;
+@text-color-secondary-dark: #99abb4;
 @text-selection-bg: @primary-color;
 @font-variant-base: tabular-nums;
 @font-feature-settings-base: 'tnum';
@@ -74,7 +74,7 @@
 @height-sm: 36px;
 
 @item-active-bg: @primary-1;
-@item-hover-bg: #8b1616;
+@item-hover-bg: #f5f5f5;
 
 @iconfont-css-prefix: anticon;
 
@@ -103,7 +103,7 @@
 @ease-in-out-quint: cubic-bezier(0.86, 0, 0.07, 1);
 
 // Border color
-@border-color-base: #144a8d; // base border outline a component
+@border-color-base: #e6ebf1; // base border outline a component
 @border-color-split: @border-color-base; // split border inside a component
 @border-color-inverse: @white;
 @border-width-base: 1px; // width of the border for a component
@@ -119,12 +119,12 @@
 @background-color-base: hsv(0, 0, 96%); // Default grey background color
 
 // Disabled states
-@disabled-color: #195b8d;
+@disabled-color: #d0d4d7;
 @disabled-bg: @gray-lightest;
 @disabled-color-dark: fade(@white, 35%);
 
 // Shadow
-@shadow-color: rgba(153, 17, 17, 0.15);
+@shadow-color: rgba(0, 0, 0, 0.15);
 @shadow-color-inverse: @component-background;
 @box-shadow-base: @shadow-2;
 @shadow-1-up: 0 -6px 16px -8px rgba(0, 0, 0, 0.08), 0 -9px 28px 0 rgba(0, 0, 0, 0.05),
